--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <meta charset="UTF-8">
   <title>JS Librarian</title>
   <!-- Insert your JavaScript -->
   <script type="text/javascript" src="librarian.js"></script>
